# ferrodoom

./: Cargo.toml  LICENSE  README.md
ferrodoom/: Cargo.toml
ferrodoom/src/: main.rs
renderer/: Cargo.toml
renderer/src/: bsp.rs  lib.rs  renderer.rs
renderer/src/shaders/: triangle.frag.spv  triangle.vert  triangle.vert.spv
wad/: Cargo.toml
wad/examples/: inspect_lump.rs  parse_wad.rs
wad/src/: error.rs  lib.rs  lumps.rs  parser.rs  wad.rs
wad/src/lumps/: linedef.rs  marker.rs  node.rs  parser.rs  sector.rs  seg.rs  sidedef.rs  subsector.rs  thing.rs  vertex.rs
