[package]
name = "wad"
version = "0.1.0"
authors = ["Berwyn Jamesson <berwyn.codeweaver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1.3.4"
thiserror = "1.0.20"
pad = "0.1.6"

[dev-dependencies]
pico-args = "0.3.4"
pretty_assertions = "0.6.1"
